@@ -564,6 +564,10 @@ strace--absolute-timestamps-format-unix-precision-s +strace-ttt.test 0 --absolut
 strace--absolute-timestamps-format-unix-precision-ms +strace-ttt.test 3 --absolute-timestamps=precision:ms --absolute-timestamps=format:unix
 strace--absolute-timestamps-format-unix-precision-us +strace-ttt.test 6 --absolute-timestamps=precision:us --absolute-timestamps=format:unix
 strace--absolute-timestamps-format-unix-precision-ns +strace-ttt.test 9 --absolute-timestamps=format:unix --absolute-timestamps=precision:ns
+strace--absolute-timestamps-format-iso +strace-tt.test 0 "%FT%T%z" "%FT%T%z" --absolute-timestamps=format:iso
+strace--absolute-timestamps-format-iso-s +strace-tt.test 0 "%FT%T%z" "%FT%T%z" --absolute-timestamps=precision:s --absolute-timestamps=iso
+strace--absolute-timestamps-format-iso-ms +strace-tt.test 0 "%FT%T%z" "%FT%T\\.[[:digit:]]{3}%z" --absolute-timestamps=iso8601 --absolute-timestamps=precision:ms
+strace--absolute-timestamps-format-iso-us +strace-tt.test 0 "%FT%T%z" "%FT%T\\.[[:digit:]]{6}%z" --timestamps=precision:us --absolute-timestamps=format:iso8601
 strace--follow-forks-output-separately +strace-ff.test --follow-forks --output-separately
 strace--relative-timestamps +strace-r.test --relative-timestamps
 strace--relative-timestamps-s +strace-r.test --relative-timestamps=s
@@ -579,6 +583,7 @@ strace--strings-in-hex	--trace=chdir --strings-in-hex --columns=18
 strace--strings-in-hex-all	--trace=chdir --strings-in-hex=all --columns=18
 strace--strings-in-hex-non-ascii	--trace=chdir --strings-in-hex=non-ascii --columns=12
 strace--timestamps +strace-t.test --timestamps
+strace--timestamps-iso-ns +strace-tt.test 0 "%FT%T%z" "%FT%T\\.[[:digit:]]{9}%z" --timestamps=iso --timestamps=ns
 strace--timestamps-time +strace-t.test --timestamps=time
 strace--timestamps-time-s +strace-t.test --timestamps=time,s
 strace--timestamps-time-ms +strace-tt.test 3 "%T" "%T" --timestamps=time,ms
